# programming_assignment_2

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: trained_sa_nn.pkl
notebooks/: 0.1-am-create-vocab.ipynb  am-ffn-lm.ipynb  am-ffn.ipynb
reports/: sa_evaluation_log
