[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "programming_assignment_2"
version = "0.0.1"
description = "Feed forward neural networks for sentiment classification and language modelling."
authors = [
  { name = "A. Mehmood" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["programming_assignment_2"]
force_sort_within_sections = true
